--- a/package.yaml
+++ b/package.yaml
@@ -15,6 +15,7 @@ description:         "Please see the README on Github at <https://github.com/msa
 
 dependencies:
 - base >= 4.7 && < 5
+- prettyprinter
 
 library:
   source-dirs: src
