--- a/package.yaml
+++ b/package.yaml
@@ -30,6 +30,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -XOverloadedStrings 
 
 tests:
   simple-test:
@@ -39,4 +40,5 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -XOverloadedStrings 
     dependencies:
